# primality-test

./: Cargo.toml
src/: lib.rs
