[package]
name = "primality-test"
version = "0.1.2"
edition = "2021"
authors = ["Hugh Brown <hughdbrown@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-exponentiation = { git = "https://github.com/hughdbrown/fast-exponentiation.git" }
prng = { git = "https://github.com/hughdbrown/prng.git" }

[dev-dependencies]
prime-factors = { git = "https://github.com/hughdbrown/prime-factors.git" }
